首页样式完善

--- a/_data/recommend.yml
+++ b/_data/recommend.yml
@@ -1,34 +1,41 @@
-- title: 第1个推荐位置
+- title: 第1个推荐位置第1个推荐位置第1个推荐位置第1个推荐位置第1个推荐位置
   img: /images/head.png
   href: /blogs/
   date: 2019.02.21
+  author: HaoXiaofei
 
 - title: 第2个推荐位置
   img: /images/head.png
   href: /blogs/
   date: 2019.02.21
+  author: HaoXiaofei
 
 - title: 第3个推荐位置
   img: /images/head.png
   href: /blogs/
   date: 2019.02.21
+  author: HaoXiaofei
 
 - title: 第4个推荐位置
   img: /images/head.png
   href: /blogs/
   date: 2019.02.21
+  author: HaoXiaofei
 
 - title: 第5个推荐位置
   img: /images/head.png
   href: /blogs/
   date: 2019.02.21
+  author: HaoXiaofei
 
 - title: 第6个推荐位置
   img: /images/head.png
   href: /blogs/
   date: 2019.02.21
+  author: HaoXiaofei
 
 - title: 第7个推荐位置
   img: /images/head.png
   href: /blogs/
   date: 2019.02.21
+  author: HaoXiaofei
