--- a/_data/directory.yml
+++ b/_data/directory.yml
@@ -2,7 +2,7 @@
   layout:
 - title: 技术博客
   layout: blogs
-- title: 飞语流年
-  layout: wx
+- title: 技术译文
+  layout: translation
 - title: 关于
   layout: about
