--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: "Android,Android博客,haoxiaofei"
 paginate: 5
 paginate_path: "page:num"
 
-permalink: /:title/
+permalink: /:year/:month/:day/:title/
 markdown: kramdown
 highlighter: rouge
 kramdown:
